--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,9 @@
 cmake_minimum_required(VERSION 2.6)
 project(sc2pcr)
 find_package(PCL)
-
-
 set (CMAKE_CXX_STANDARD 11)
 
-
+include_directories(./include/)
 include_directories(${PCL_INCLUDE_DIRS})
 # include_directories(${LIBLAS_INCLUDE_DIR})
 
@@ -15,6 +13,6 @@ add_definitions(${PCL_DEFINITIONS})
 
 
 list(REMOVE_ITEM PCL_LIBRARIES "vtkproj4")
-add_executable(${PROJECT_NAME} main.cpp pcr.cpp FPFHPCR.cpp ConfigRead.cpp)
+add_executable(${PROJECT_NAME} src/main.cpp src/pcr.cpp src/FPFHPCR.cpp )
 target_link_libraries (${PROJECT_NAME} ${PCL_LIBRARIES})
 install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin)
